moar trying to spin up seafile

--- a/website/site/index.html
+++ b/website/site/index.html
@@ -1,2 +1,6 @@
 <h1>Quinn Dougherty</h1>
-<p>Welcome to my homepage. It&apos;s under construction.</p>
+<p>Welcome to my homepage. It is under construction.</p>
+<ol>
+  <li><a href="cv.html">Preliminaries</a></li>
+  <li><a href="crockeretc.html">Dominate</a></li>
+</ol>
