--- a/website/site/index.html
+++ b/website/site/index.html
@@ -1,6 +1,8 @@
-<h1>Quinn Dougherty</h1>
 <p>Welcome to my homepage. It is under construction.</p>
 <ol>
   <li><a href="cv">CV</a></li>
   <li><a href="crockeretc">Crocker etc</a></li>
+  <li>
+    <a href="/assets/img/ai-views-snapshots.png">"p(doom)" worldview</a>
+  </li>
 </ol>
