--- a/website/site/index.html
+++ b/website/site/index.html
@@ -1,8 +1,13 @@
 <p>Welcome to my homepage. It is under construction.</p>
 <ol>
-  <li><a href="cv">CV</a></li>
+  <li><a href="cv">CV</a> (<a href="/assets/cv.pdf">pdf</a>)</li>
   <li><a href="crockeretc">Crocker etc</a></li>
   <li>
-    <a href="/assets/img/ai-views-snapshots.png">"p(doom)" worldview</a>
+    <a
+      href="/assets/img/ai-views-snapshots.png"
+      target="_blank"
+      rel="noopener noreferrer"
+      >"p(doom)" worldview</a
+    >
   </li>
 </ol>
