--- a/website/site/index.html
+++ b/website/site/index.html
@@ -1,4 +1,4 @@
-<p>Welcome to my homepage. It is under construction.</p>
+<p>New, sparse, currently self-hosted homepage.</p>
 <ol>
   <li><a href="cv">CV</a> (<a href="/assets/cv.pdf">pdf</a>)</li>
   <li><a href="crockeretc">Crocker etc</a></li>
