--- a/website/site/index.html
+++ b/website/site/index.html
@@ -11,4 +11,9 @@
     >
   </li>
   <li><a href="date">Date doc</a></li>
+  <li>
+    <a href="https://gsai.substack.com"
+      >Progress in Guaranteed Safe AI (newsletter)</a
+    >
+  </li>
 </ol>
